--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-base/sw-condition-base.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-base/sw-condition-base.html.twig
@@ -1,12 +1,12 @@
-{% block sw_condition_group %}
-<div class="sw-condition-placeholder">
-    {% block sw_condition_group_field_condition %}
+{% block sw_condition %}
+<div class="sw-condition-base">
+    {% block sw_condition_field_condition %}
     <div class="field--condition">
-        {% block sw_condition_group_field_condition_select %}
+        {% block sw_condition_field_condition_select %}
         <select name="name"
-                class="sw-condition-group__field"
+                class="sw-condition-base__field"
                 v-model="condition.type">
-            {% block sw_condition_group_field_condition_select_option %}
+            {% block sw_condition_field_condition_select_option %}
             <option v-for="(innerCondition, innerConditionType) in ruleConditionService.getConditions()"
                     :selected="innerConditionType === condition.type"
                     :value="innerConditionType">
@@ -21,13 +21,13 @@
     {% block sw_condition_fields %}
     <slot name="condition-fields">
         <sw-field type="text" class="field--value"
-                  :placeholder="$tc('global.sw-condition-group.condition.placeholder-warning')"
+                  :placeholder="$tc('global.sw-condition.condition.placeholder-warning')"
                   :disabled="true">
         </sw-field>
     </slot>
     {% endblock %}
 
-    {% block sw_condition_group_field_actions %}
+    {% block sw_condition_field_actions %}
     <div class="field--actions">
         <sw-context-button>
             <sw-context-menu-item @click="$emit('delete-condition', condition)" variant="danger">
