--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-date-range/sw-condition-date-range.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-date-range/sw-condition-date-range.html.twig
@@ -11,7 +11,7 @@
 </sw-field>
 <sw-field type="checkbox"
           name="useTime"
-          :label="$tc('global.sw-condition-group.condition.dateRangeRule.useTime')"
+          :label="$tc('global.sw-condition.condition.dateRangeRule.useTime')"
           v-model="condition.value.useTime"
           class="field--use-time">
 </sw-field>
