--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-not-found/sw-condition-not-found.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-not-found/sw-condition-not-found.html.twig
@@ -1,7 +1,7 @@
 {% block sw_condition_fields %}
 <sw-field type="text"
           class="field--value"
-          :placeholder="$tc('global.sw-condition-group.condition.not-found.label')"
+          :placeholder="$tc('global.sw-condition.condition.not-found.label')"
           :disabled="true">
     <template slot="suffix">
         <sw-help-text :text="errorMessage" :width="200" tooltipPosition="top">
