--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-or-container/sw-condition-or-container.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-or-container/sw-condition-or-container.html.twig
@@ -1,7 +1,6 @@
 {% block sw_condition_container %}
-    <div class="condition-and-container"
+    <div class="condition-or-container"
          :class="{
-            'first-container': level === 0,
             'background--white': level % 2 !== 0,
             'background--gray': level % 2 === 0
          }">
@@ -9,8 +8,8 @@
             <div v-for="(child, index) in condition.children"
                  :key="index">
                 <div v-if="index"
-                     class="spacer spacer--and">
-                    {{ $tc('global.sw-condition.condition.and') }}
+                     class="spacer spacer--or">
+                    {{ $tc('global.sw-condition.condition.or') }}
                 </div>
                 <component v-bind:is="getComponent(child.type)"
                            :condition="child"
@@ -20,7 +19,7 @@
                 </component>
             </div>
             <div v-if="level !== 0" class="condition-buttons">
-                <sw-button class="condition-buttons--and" @click="onAddAndClick">{{ $tc('global.sw-condition.condition.and') }}</sw-button>
+                <sw-button class="condition-buttons--and" @click="onAddAndClick">{{ $tc('global.sw-condition.condition.or') }}</sw-button>
                 <sw-button class="condition-buttons--sub" @click="onAddChildClick">{{ $tc('global.sw-condition.condition.subCondition') }}</sw-button>
                 <sw-button class="condition-buttons--delete" @click="onDeleteAll">{{ $tc('global.sw-condition.condition.deleteConditions') }}</sw-button>
             </div>
