--- a/Resources/administration/src/app/component/media/sw-media-modal-folder-settings/sw-media-modal-folder-settings.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-modal-folder-settings/sw-media-modal-folder-settings.html.twig
@@ -92,6 +92,9 @@
                                                 type="number"
                                                 :label="$tc('global.sw-media-modal-folder-settings.labelThumbnailQuality')"
                                                 v-model="folder.configuration.thumbnailQuality"
+                                                :validation="folder.configuration.thumbnailQuality >= 0 &&  folder.configuration.thumbnailQuality <= 100"
+                                                min="0"
+                                                max="100"
                                                 :disabled="notEditable">
                                         </sw-field>
                                     {% endblock %}
