--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-or-container/sw-condition-or-container.less
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-or-container/sw-condition-or-container.less
@@ -22,7 +22,7 @@
     .condition-buttons {
         margin-top: 20px;
 
-        .condition-buttons--and {
+        .condition-buttons--or {
             margin-right: 10px;
         }
 
