--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-and-container/sw-condition-and-container.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-and-container/sw-condition-and-container.html.twig
@@ -2,28 +2,38 @@
     <div class="condition-and-container"
          :class="{
             'first-container': level === 0,
-            'background--white': level % 2 !== 0,
-            'background--gray': level % 2 === 0
+            'background--white': level % 2 === 0,
+            'background--gray': level % 2 !== 0
          }">
-        <div class="condition-content">
-            <div v-for="(child, index) in condition.children"
-                 :key="index">
-                <div v-if="index"
-                     class="spacer spacer--and">
-                    {{ $tc('global.sw-condition.condition.and') }}
-                </div>
-                <component v-bind:is="getComponent(child.type)"
-                           :condition="child"
-                           :conditionAssociations="conditionAssociations"
-                           :level="level + 1"
-                           @delete-condition="onDeleteCondition">
-                </component>
+        {% block sw_condition_container_content %}
+            <div class="condition-content">
+                {% block sw_condition_container_children %}
+                    <div v-for="(child, index) in condition.children"
+                         :key="index">
+                        {% block sw_condition_container_children_spacer %}
+                            <div v-if="index"
+                                 class="spacer spacer--and">
+                                {{ $tc('global.sw-condition.condition.and') }}
+                            </div>
+                        {% endblock %}
+                        {% block sw_condition_container_children_component %}
+                            <component v-bind:is="getComponent(child.type)"
+                                       :condition="child"
+                                       :conditionAssociations="conditionAssociations"
+                                       :level="level + 1"
+                                       @delete-condition="onDeleteCondition">
+                            </component>
+                        {% endblock %}
+                    </div>
+                {% endblock %}
+                {% block sw_condition_container_actions %}
+                    <div v-if="level !== 0" class="condition-buttons">
+                        <sw-button class="condition-buttons--and" @click="onAddAndClick">{{ $tc('global.sw-condition.condition.and') }}</sw-button>
+                        <sw-button class="condition-buttons--sub" @click="onAddChildClick">{{ $tc('global.sw-condition.condition.subCondition') }}</sw-button>
+                        <sw-button class="condition-buttons--delete" @click="onDeleteAll">{{ $tc('global.sw-condition.condition.deleteConditions') }}</sw-button>
+                    </div>
+                {% endblock %}
             </div>
-            <div v-if="level !== 0" class="condition-buttons">
-                <sw-button class="condition-buttons--and" @click="onAddAndClick">{{ $tc('global.sw-condition.condition.and') }}</sw-button>
-                <sw-button class="condition-buttons--sub" @click="onAddChildClick">{{ $tc('global.sw-condition.condition.subCondition') }}</sw-button>
-                <sw-button class="condition-buttons--delete" @click="onDeleteAll">{{ $tc('global.sw-condition.condition.deleteConditions') }}</sw-button>
-            </div>
-        </div>
+        {% endblock %}
     </div>
 {% endblock %}
