--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-different-addresses/sw-condition-different-addresses.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-different-addresses/sw-condition-different-addresses.html.twig
@@ -1,10 +1,14 @@
 {% block sw_condition_fields %}
-<sw-field type="text"
-          class="field--operator" :placeholder="$tc(operator.label)"
-          disabled="true">
-</sw-field>
-<sw-field type="checkbox"
-          class="field--value is--secondary"
-          v-model="condition.value.isDifferent">
-</sw-field>
+    {% block sw_condition_fields_operator %}
+        <sw-field type="text"
+                  class="field--operator" :placeholder="$tc(operator.label)"
+                  disabled="true">
+        </sw-field>
+    {% endblock %}
+    {% block sw_condition_fields_value %}
+        <sw-field type="checkbox"
+                  class="field--value is--secondary"
+                  v-model="condition.value.isDifferent">
+        </sw-field>
+    {% endblock %}
 {% endblock %}
