--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-last-name/sw-condition-last-name.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-last-name/sw-condition-last-name.html.twig
@@ -1,15 +1,19 @@
 {% block sw_condition_fields %}
-<sw-field type="select"
-          name="operator"
-          v-model="condition.value.operator"
-          class="field--operator">
-    <template slot="options">
-        <option v-for="operator in operators" :value="operator.identifier">
-            {{ $tc(operator.label) }}
-        </option>
-    </template>
-</sw-field>
-<sw-field class="field--value is--secondary"
-          v-model="condition.value.lastName">
-</sw-field>
+    {% block sw_condition_fields_operator %}
+        <sw-field type="select"
+                  name="operator"
+                  v-model="condition.value.operator"
+                  class="field--operator">
+            <template slot="options">
+                <option v-for="operator in operators" :value="operator.identifier">
+                    {{ $tc(operator.label) }}
+                </option>
+            </template>
+        </sw-field>
+    {% endblock %}
+    {% block sw_condition_fields_value %}
+        <sw-field class="field--value is--secondary"
+                  v-model="condition.value.lastName">
+        </sw-field>
+    {% endblock %}
 {% endblock %}
