--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-line-item-of-type/sw-condition-line-item-of-type.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-line-item-of-type/sw-condition-line-item-of-type.html.twig
@@ -1,22 +1,26 @@
 {% block sw_condition_fields %}
-<sw-field type="select"
-          name="operator"
-          v-model="condition.value.operator"
-          class="field--operator">
-    <template slot="options">
-        <option v-for="operator in operators" :value="operator.identifier">
-            {{ $tc(operator.label) }}
-        </option>
-    </template>
-</sw-field>
-<sw-field type="select"
-          :name="lineItemType"
-          v-model="condition.value.lineItemType"
-          class="field--value">
-    <template slot="options">
-        <option v-for="(lineItemType, identifier) in lineItemTypes" :value="identifier">
-            {{ $tc(lineItemType.label) }}
-        </option>
-    </template>
-</sw-field>
+    {% block sw_condition_fields_operator %}
+        <sw-field type="select"
+                  name="operator"
+                  v-model="condition.value.operator"
+                  class="field--operator">
+            <template slot="options">
+                <option v-for="operator in operators" :value="operator.identifier">
+                    {{ $tc(operator.label) }}
+                </option>
+            </template>
+        </sw-field>
+    {% endblock %}
+    {% block sw_condition_fields_value %}
+        <sw-field type="select"
+                  :name="lineItemType"
+                  v-model="condition.value.lineItemType"
+                  class="field--value">
+            <template slot="options">
+                <option v-for="(lineItemType, identifier) in lineItemTypes" :value="identifier">
+                    {{ $tc(lineItemType.label) }}
+                </option>
+            </template>
+        </sw-field>
+    {% endblock %}
 {% endblock %}
