--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-line-item-with-quantity/sw-condition-line-item-with-quantity.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-line-item-with-quantity/sw-condition-line-item-with-quantity.html.twig
@@ -1,22 +1,28 @@
 {% block sw_condition_fields %}
-<sw-select :store="getProductStore()"
-           :id="condition.id"
-           class="sw-condition-base__field is--secondary"
-           v-model="condition.value.id">
-</sw-select>
-<sw-field type="select"
-          name="operator"
-          v-model="condition.value.operator"
-          class="field--operator">
-    <template slot="options">
-        <option v-for="operator in operators" :value="operator.identifier">
-            {{ $tc(operator.label) }}
-        </option>
-    </template>
-</sw-field>
-<sw-field type="number"
-          step="1"
-          class="field--value is--secondary"
-          v-model="condition.value.quantity">
-</sw-field>
+    {% block sw_condition_fields_product %}
+        <sw-select :store="getProductStore()"
+                   :id="condition.id"
+                   class="sw-condition-base__field is--secondary"
+                   v-model="condition.value.id">
+        </sw-select>
+    {% endblock %}
+    {% block sw_condition_fields_operator %}
+        <sw-field type="select"
+                  name="operator"
+                  v-model="condition.value.operator"
+                  class="field--operator">
+            <template slot="options">
+                <option v-for="operator in operators" :value="operator.identifier">
+                    {{ $tc(operator.label) }}
+                </option>
+            </template>
+        </sw-field>
+    {% endblock %}
+    {% block sw_condition_fields_value %}
+        <sw-field type="number"
+                  step="1"
+                  class="field--value is--secondary"
+                  v-model="condition.value.quantity">
+        </sw-field>
+    {% endblock %}
 {% endblock %}
