--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.less
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.less
@@ -23,6 +23,15 @@
         margin: 0 25px;
     }
 
+    .sw-media-quickinfo__metadata-list{
+        display: grid;
+        grid-template-columns: auto 1fr;
+        grid-auto-rows: 40px;
+        grid-column-gap: 16px;
+        align-items: center;
+        overflow: visible;
+    }
+
     .sw-media-quickinfo__two-columns {
         list-style: none;
         display: grid;
@@ -72,5 +81,14 @@
 
     >:last-child {
         border-bottom: 1px solid @sw-media-quickinfo-color-divider;
+    }
+
+    .sw-field.sw-field--inline.sw-media-quickinfo__metadata-inline-field {
+        margin-bottom: 0;
+
+        input[type="inline"] {
+            padding: 2px 16px;
+
+        }
     }
 }
