--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-or-container/sw-condition-or-container.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-or-container/sw-condition-or-container.html.twig
@@ -1,14 +1,13 @@
 {% block sw_condition_container %}
-<div class="condition-or-container"
-     :class="level % 2 ? 'background--gray' : 'background--white'">
+<div class="sw-condition-or-container " :class="`${containerRowClass} ${firstContainer}`">
     {% block sw_condition_container_content %}
-    <div class="condition-content">
+    <div class="sw-condition-or-container__condition-content">
         {% block sw_condition_container_children %}
         <div v-for="(child, index) in condition.children"
              :key="index">
             {% block sw_condition_container_children_spacer %}
             <div v-if="index"
-                 class="spacer spacer--or">
+                 class="condition-content__spacer--or">
                 {{ $tc('global.sw-condition.condition.or') }}
             </div>
             {% endblock %}
@@ -23,10 +22,16 @@
         </div>
         {% endblock %}
         {% block sw_condition_container_actions %}
-        <div v-if="level !== 0" class="condition-buttons">
-            <sw-button class="condition-buttons--or" @click="onAddAndClick">{{ $tc('global.sw-condition.condition.or') }}</sw-button>
-            <sw-button class="condition-buttons--sub" @click="onAddChildClick">{{ $tc('global.sw-condition.condition.subCondition') }}</sw-button>
-            <sw-button class="condition-buttons--delete" @click="onDeleteAll">{{ $tc('global.sw-condition.condition.deleteConditions') }}</sw-button>
+        <div v-if="level !== 0" class="sw-condition-or-container__actions">
+            <sw-button class="sw-condition-or-container__actions--or" @click="onAddAndClick">
+                {{ $tc('global.sw-condition.condition.or') }}
+            </sw-button>
+            <sw-button class="sw-condition-or-container__actions--sub" @click="onAddChildClick">
+                {{ $tc('global.sw-condition.condition.subCondition') }}
+            </sw-button>
+            <sw-button class="sw-condition-or-container__actions--delete" @click="onDeleteAll">
+                {{ $tc('global.sw-condition.condition.deleteConditions') }}
+            </sw-button>
         </div>
         {% endblock %}
     </div>
