--- a/Resources/administration/src/app/component/form/sw-tagged-field/sw-tagged-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-tagged-field/sw-tagged-field.html.twig
@@ -12,53 +12,27 @@
                                   tag="ul"
                                   class="sw-tagged-field__tags"
                                   mode="out-in">
-                    {% block sw_tagged_field_tag_item %}
-                        <li class="sw-tagged-field__tag-item"
-                            v-for="(tag, index) in tags"
-                            :key="index"
-                            :data-id="index"
-                            @click="$emit('sw-tagged-field-tag-clicked', { tag, index })">
-
-                            {% block sw_tagged_field_tag_item_inner %}
-                                {% block sw_tagged_field_tag_text_holder %}
-                                    <slot name="tag" :item="tag">
-                                        <span v-if="!editTags[index]" class="sw_tagged_field__tag-text">
-                                            {% block sw_tagged_field__tag_text %}
-                                                {{ tag }}
-                                            {% endblock %}
-                                        </span>
-                                        <span contenteditable="true"
-                                              class="sw-tagged-field__edit-text"
-                                              v-model="editTags[index]"
-                                              @keydown="performModifyTag(index, $event)"
-                                              :ref="`input${index}`"
-                                              v-else>
-                                            {{ editTags[index] }}
-                                    </slot>
-                                {% endblock %}
-
-                                {% block sw_tagged_field_tag_dismiss %}
-                                    <button class="sw-tagged-field__tag-dismiss"
-                                            :title="$tc('global.sw-tagged-field.buttonDismiss')"
-                                            @click.prevent.stop="dismissTag(index)"
-                                            v-if="!editTags[index]">
-                                        {% block sw_tagged_field_tag_dismiss_icon %}
-                                            <sw-icon name="small-default-x-line-medium">
-                                            </sw-icon>
-                                        {% endblock %}
-                                    </button>
-                                    <button class="sw-tagged-field__tag-revert"
-                                            :title="$tc('global.sw-tagged-field.buttonDismiss')"
-                                            @click.prevent.stop="revertTag(index)"
-                                            v-else>
-                                        {% block sw_tagged_field_tag_undo_icon %}
-                                            <sw-icon name="text-editor-undo">
-                                            </sw-icon>
-                                        {% endblock %}
-                                    </button>
-                                {% endblock %}
-                            {% endblock %}
-                        </li>
+                    {% block sw_tagged_field_tag_items %}
+                        <sw-label v-for="(tag, index) in tags"
+                                  :key="index"
+                                  @dismiss="dismissTag(index)"
+                                  @selected="$emit('sw-tagged-field-tag-clicked', { tag, index })">
+                            <template v-if="!editTags[index]">
+                                {{ tag }}
+                            </template>
+                            <template v-else slot="sw_label_text_holder">
+                                <span contenteditable="true"
+                                      class="sw-tagged-field__edit-text"
+                                      @keydown="performModifyTag(index, $event)"
+                                      :ref="`input${index}`">
+                                    {{ editTags[index] }}
+                                </span>
+                            </template>
+                            <template v-if="editTags[index]" slot="sw-label__dismiss-icon">
+                                <sw-icon name="text-editor-undo">
+                                </sw-icon>
+                            </template>
+                        </sw-label>
                     {% endblock %}
 
                     {% block sw_tagged_field_item_input %}
